--- a/index.html
+++ b/index.html
@@ -196,27 +196,53 @@
             </section>
 
             <section class="section-galerie">
-                <h2>Découvrez un siècle d’histoire en photos</h2>
+                <h3>Découvrez un siècle d’histoire en photos</h3>
                 <div class="grid-galerie">
-                    <img src="./assets/img/Galerie2CV.jpg" alt="" id="2CV" />
-                    <img src="./assets/img/Galerie404.jpg" alt="" id="404" />
-                    <img
-                        src="./assets/img/Galeriecitroen.jpg"
-                        alt=""
-                        id="citroen"
-                    />
-                    <img src="./assets/img/GalerieDS.jpg" alt="" id="DS" />
-                    <img
-                        src="./assets/img/GalerieHerato.jpg"
-                        alt=""
-                        id="Herato"
-                    />
-                    <img src="./assets/img/GalerieSel.jpg" alt="" id="Sel" />
-                    <img
-                        src="./assets/img/GalerieZastava.jpg"
-                        alt=""
-                        id="Zastava"
-                    />
+                    <div class="div1">
+                        <img
+                            src="./assets/img/Galeriecitroen.jpg"
+                            alt=""
+                            id="citroen"
+                        />
+                    </div>
+                    <div class="div2">
+                        <img
+                            src="./assets/img/GalerieHerato.jpg"
+                            alt=""
+                            id="Herato"
+                        />
+                    </div>
+                    <div class="div3">
+                        <img src="./assets/img/GalerieDS.jpg" alt="" id="DS" />
+                    </div>
+                    <div class="div4">
+                        <img
+                            src="./assets/img/GalerieZastava.jpg"
+                            alt=""
+                            id="Zastava"
+                        />
+                    </div>
+                    <div class="div5">
+                        <img
+                            src="./assets/img/GalerieSel.jpg"
+                            alt=""
+                            id="Sel"
+                        />
+                    </div>
+                    <div class="div6">
+                        <img
+                            src="./assets/img/Galerie404.jpg"
+                            alt=""
+                            id="404"
+                        />
+                    </div>
+                    <div class="div7">
+                        <img
+                            src="./assets/img/Galerie2CV.jpg"
+                            alt=""
+                            id="2CV"
+                        />
+                    </div>
                 </div>
                 <button class="button">Découvrir</button>
             </section>
