--- a/index.html
+++ b/index.html
@@ -265,7 +265,57 @@
                     <img src="./assets/img/logo-total.png" alt="" />
                 </div>
             </section>
-            <footer></footer>
+            <footer>
+                <div class="footer-content">
+                    <div class="footer-left">
+                        <div class="footer-left-top">
+                            <div class="pages">
+                                <h4>Pages</h4>
+                                <ul>
+                                    <li>Accueil</li>
+                                    <li>Découvrir</li>
+                                    <li>Accès</li>
+                                    <li>A.M.A.V</li>
+                                </ul>
+                            </div>
+                            <div class="A-propos">
+                                <h4>A propos</h4>
+                                <ul>
+                                    <li>L'établissement public</li>
+                                    <li>Règlement de visite</li>
+                                    <li>Presse</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="footer-left-bottom">
+                            <h4>Nous contacter</h4>
+                            <ul>
+                                <li>+33 5 66 91 78 12</li>
+                                <li>musee-auto-valencay@orange.fr</li>
+                                <li>F.A.Q</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="footer-right">
+                        <div class="follow">
+                            <h4>Suivez-nous</h4>
+                        </div>
+                        <div class="join-us">
+                            <h4>Notre association</h4>
+                            <p>A.M.A.V</p>
+                            <button class="button">En savoir plus</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="under-footer">
+                    <ul>
+                        <li>Mentions légales</li>
+                        <li>Cookies</li>
+                        <li>Accessibilité</li>
+                        <li>Crédits</li>
+                    </ul>
+                </div>
+            </footer>
         </main>
     </body>
 </html>
