--- a/index.html
+++ b/index.html
@@ -288,17 +288,27 @@
                             </div>
                         </div>
                         <div class="footer-left-bottom">
-                            <h4>Nous contacter</h4>
-                            <ul>
-                                <li>+33 5 66 91 78 12</li>
-                                <li>musee-auto-valencay@orange.fr</li>
-                                <li>F.A.Q</li>
-                            </ul>
+                            <div class="flb-content">
+                                <h4>Nous contacter</h4>
+                                <ul>
+                                    <li>+33 5 66 91 78 12</li>
+                                    <li>musee-auto-valencay@orange.fr</li>
+                                    <li>F.A.Q</li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                     <div class="footer-right">
                         <div class="follow">
                             <h4>Suivez-nous</h4>
+                            <ul>
+                                <li><i class="fa-brands fa-instagram"></i></li>
+                                <li>
+                                    <i class="fa-brands fa-square-facebook"></i>
+                                </li>
+                                <li><i class="fa-brands fa-twitter"></i></li>
+                                <li><i class="fa-brands fa-youtube"></i></li>
+                            </ul>
                         </div>
                         <div class="join-us">
                             <h4>Notre association</h4>
