--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
         />
-        <link rel="stylesheet" href="/styles/index.css" />
+        <link rel="stylesheet" href="./styles/index.css" />
     </head>
     <body>
         <header>
@@ -197,8 +197,8 @@
 
             <section class="section-galerie">
                 <h3>Découvrez un siècle d’histoire en photos</h3>
-                <div class="grid-galerie">
-                    <div class="div1">
+                <div class="grid-wrapper">
+                    <div class="div1 tall">
                         <img
                             src="./assets/img/Galeriecitroen.jpg"
                             alt=""
@@ -212,7 +212,7 @@
                             id="Herato"
                         />
                     </div>
-                    <div class="div3">
+                    <div class="div3 tall">
                         <img src="./assets/img/GalerieDS.jpg" alt="" id="DS" />
                     </div>
                     <div class="div4">
