--- a/index.html
+++ b/index.html
@@ -133,10 +133,12 @@
                     <p>12, Avenue de la Résistance 36600 VALENCAY</p>
                     <ul>
                         <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
+                        <li><i class="fa-solid fa-wheelchair-move"></i></li>
+                        <li><i class="fa-solid fa-square-parking"></i></li>
+                        <li>
+                            <i class="fa-sharp fa-solid fa-dog-leashed"></i>
+                        </li>
+                        <li><i class="fa-solid fa-camera"></i></li>
                     </ul>
                     <iframe
                         src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10851.127460874199!2d1.5606966!3d47.1621265!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x98b7ea5c01a0bc7!2sMus%C3%A9e%20de%20l&#39;Automobile%20de%20Valen%C3%A7ay!5e0!3m2!1sfr!2sfr!4v1665930359178!5m2!1sfr!2sfr"
@@ -243,8 +245,8 @@
                             id="2CV"
                         />
                     </div>
+                    <button class="button">Découvrir</button>
                 </div>
-                <button class="button">Découvrir</button>
             </section>
             <section class="section-confiance">
                 <h2>Ils nous font confiance</h2>
