--- a/index.html
+++ b/index.html
@@ -245,9 +245,12 @@
                             id="2CV"
                         />
                     </div>
+                </div>
+                <div class="decouvrir">
                     <button class="button">Découvrir</button>
                 </div>
             </section>
+
             <section class="section-confiance">
                 <h2>Ils nous font confiance</h2>
                 <p>
