--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                         <li><i class="fa-solid fa-wheelchair-move"></i></li>
                         <li><i class="fa-solid fa-square-parking"></i></li>
                         <li>
-                            <i class="fa-sharp fa-solid fa-dog-leashed"></i>
+                            <i class="fa-regular fa-dog-leashed"></i>
                         </li>
                         <li><i class="fa-solid fa-camera"></i></li>
                     </ul>
