--- a/index.html
+++ b/index.html
@@ -316,9 +316,7 @@
                             </ul>
                         </div>
                         <div class="join-us">
-                            <h4>Notre association</h4>
-                            <p>A.M.A.V</p>
-                            <button class="button">En savoir plus</button>
+                            <img src="./assets/img/ccev.png" alt="" />
                         </div>
                     </div>
                 </div>
