--- a/index.html
+++ b/index.html
@@ -90,37 +90,41 @@
                 <h2>Infos pratiques</h2>
                 <div class="tarifs-horaires">
                     <div class="tarifs">
-                        <h3>Tarifs</h3>
-                        <div class="tarifs-normal">
-                            <p>
-                                <span>Plein tarif</span> : 7,00€ <br />
-                                <span>Tarif réduit</span> : 6,00€
-                            </p>
-                        </div>
-                        <div class="tarifs-spe">
-                            <p>
-                                <span>Jeune</span> (de 7 à 17 ans) : 5,00€
-                                <br />
-                                <span>Famille</span> (2 adultes et 2 jeunes) :
-                                20,00€
-                            </p>
+                        <div>
+                            <h3>Tarifs</h3>
+                            <div class="tarifs-normal">
+                                <p>
+                                    <span>Plein tarif</span> : 7,00€ <br />
+                                    <span>Tarif réduit</span> : 6,00€
+                                </p>
+                            </div>
+                            <div class="tarifs-spe">
+                                <p>
+                                    <span>Jeune</span> (de 7 à 17 ans) : 5,00€
+                                    <br />
+                                    <span>Famille</span> (2 adultes et 2 jeunes)
+                                    : 20,00€
+                                </p>
+                            </div>
                         </div>
 
                         <button class="button">En savoir plus</button>
                     </div>
                     <div class="horaires">
-                        <h3>Ouverture/Horaires</h3>
-                        <div class="avril">
-                            <p>
-                                <span>Avril/novembre :</span> <br />10h - 12h30
-                                / 14h - 18h
-                            </p>
-                        </div>
-                        <div class="juillet">
-                            <p>
-                                <span>Juillet/août :</span><br />10h - 12h30 /
-                                14h - 18h30
-                            </p>
+                        <div>
+                            <h3>Horaires</h3>
+                            <div class="avril">
+                                <p>
+                                    <span>Avril/novembre :</span> <br />10h -
+                                    12h30 / 14h - 18h
+                                </p>
+                            </div>
+                            <div class="juillet">
+                                <p>
+                                    <span>Juillet/août :</span><br />10h - 12h30
+                                    / 14h - 18h30
+                                </p>
+                            </div>
                         </div>
 
                         <button class="button">En savoir plus</button>
@@ -151,51 +155,95 @@
                     ></iframe>
                 </div>
             </section>
-            <section class="section-events">
-                <h2>Événements</h2>
-                <div class="events">
-                    <img src="./assets/img/evenements01.jpg" alt="" />
-                    <h4>Rassemblement</h4>
-                    <p>
-                        Rassemblement de véhicules de collection. Disponible
-                        d’avril à novembre 2022.
-                    </p>
-                    <button class="button">En savoir plus</button>
-                </div>
-                <div class="events">
-                    <img src="./assets/img/evenements02.jpg" alt="" />
-                    <h4>Bourses miniatures</h4>
-                    <p>
-                        Venez découvrir la beauté d’anciens jouets à la salle
-                        des fêtes, le 16 octobre 2022.
-                    </p>
-                    <button class="button">En savoir plus</button>
-                </div>
-                <div class="events">
-                    <img src="./assets/img/evenements03.jpg" alt="" />
-                    <h4>Marques oubliées</h4>
-                    <p>
-                        Visitez une exposition organisée par l’A.M.A.V,
-                        disponible du 1er avril au 6 novembre 2022.
-                    </p>
-                    <button class="button">En savoir plus</button>
-                </div>
+            <section class="events">
+                <section class="titre">
+                    <h2>Événements</h2>
+                </section>
+
+                <section class="container">
+                    <article>
+                        <img
+                            class="img_container"
+                            src="./assets/img/evenements01.jpg"
+                            alt=""
+                        />
+                        <div class="container_texte">
+                            <h4>Rassemblement</h4>
+                        </div>
+                        <div class="sous-titre">
+                            <p>
+                                Rassemblement de véhicules de collection.
+                                Disponible d’avril à novembre 2022.
+                            </p>
+                        </div>
+
+                        <button class="savoir-button">en savoir plus</button>
+                    </article>
+
+                    <article>
+                        <img
+                            class="img_container"
+                            src="./assets/img/evenements02.jpg"
+                            alt=""
+                        />
+                        <div class="container_texte">
+                            <div class="titre2">
+                                <h4>Bourses miniatures</h4>
+                            </div>
+                            <div class="sous-titre">
+                                <p>
+                                    Venez découvrir la beauté d’anciens jouets à
+                                    la salle des fêtes, le 16 octobre 2022.
+                                </p>
+                            </div>
+                        </div>
+                        <button class="savoir-button">en savoir plus</button>
+                    </article>
+
+                    <article>
+                        <img
+                            class="img_container"
+                            src="./assets/img/evenements03.jpg"
+                            alt=""
+                        />
+                        <div class="container_texte">
+                            <h4>Marques oubliées</h4>
+                            <div class="sous-titre">
+                                <p>
+                                    Visitez une exposition organisée par
+                                    l’A.M.A.V, disponible du 1er avril au 6
+                                    novembre 2022.
+                                </p>
+                            </div>
+                        </div>
+                        <button class="savoir-button">en savoir plus</button>
+                    </article>
+                </section>
             </section>
-            <section class="section-asso">
-                <h2>Association</h2>
-                <div class="asso-content">
-                    <img src="./assets/img/association.jpg" alt="" />
-                    <div class="asso-txt">
-                        <h4>Amis du Musée de l’Automobile de Valençay</h4>
-                        <p>
-                            Le but de cette association est de promouvoir,
-                            d’animer et de valoriser le musée de l’Automobile de
-                            Valençay.
-                        </p>
-                        <button class="button">En savoir plus</button>
-                    </div>
-                </div>
-            </section>
+            <div class="section-col-association">
+                <section class="association">
+                    <h2>Notre association</h2>
+                    <section class="container">
+                        <div class="association-content">
+                            <img src="./assets/img/association.jpg" alt="" />
+                            <br />
+                            <div class="association-txt">
+                                <h4>
+                                    Amis du Musée de l’Automobile de Valençay
+                                </h4>
+                                <p>
+                                    Le but de cette association est de
+                                    promouvoir, d’animer et de valoriser le
+                                    musée de l’Automobile de Valençay.
+                                </p>
+                                <button class="savoir-button">
+                                    En savoir plus
+                                </button>
+                            </div>
+                        </div>
+                    </section>
+                </section>
+            </div>
 
             <section class="section-galerie">
                 <h3>Découvrez un siècle d’histoire en photos</h3>
