for the responsive

--- a/index.html
+++ b/index.html
@@ -162,21 +162,25 @@
 
                 <section class="container">
                     <article>
-                        <img
-                            class="img_container"
-                            src="./assets/img/evenements01.jpg"
-                            alt=""
-                        />
-                        <div class="container_texte">
-                            <h4>Rassemblement</h4>
+                        <div>
+                            <img
+                                class="img_container"
+                                src="./assets/img/evenements01.jpg"
+                                alt=""
+                            />
+                            <div class="container_texte">
+                                <div class="titre2">
+                                    <h4>Rassemblement</h4>
+                                </div>
+                                <div class="sous-titre">
+                                    <p>
+                                        Rassemblement de véhicules de
+                                        collection. Disponible d’avril à
+                                        novembre 2022.
+                                    </p>
+                                </div>
+                            </div>
                         </div>
-                        <div class="sous-titre">
-                            <p>
-                                Rassemblement de véhicules de collection.
-                                Disponible d’avril à novembre 2022.
-                            </p>
-                        </div>
-
                         <button class="savoir-button">en savoir plus</button>
                     </article>
 
