--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
                                 l'évolution de l'industrie automobile française
                                 sur près d'un siècle.
                             </p>
+
                             <button class="button">En savoir plus</button>
                         </div>
                     </div>
@@ -155,74 +156,44 @@
                     ></iframe>
                 </div>
             </section>
-            <section class="events">
-                <section class="titre">
-                    <h2>Événements</h2>
-                </section>
-
-                <section class="container">
-                    <article>
-                        <div>
-                            <img
-                                class="img_container"
-                                src="./assets/img/evenements01.jpg"
-                                alt=""
-                            />
-                            <div class="container_texte">
-                                <div class="titre2">
-                                    <h4>Rassemblement</h4>
-                                </div>
-                                <div class="sous-titre">
-                                    <p>
-                                        Rassemblement de véhicules de
-                                        collection. Disponible d’avril à
-                                        novembre 2022.
-                                    </p>
-                                </div>
-                            </div>
+            <section class="evenements">
+                <h2>Événements</h2>
+                <div class="events-container">
+                    <div class="events">
+                        <div class="img-container">
+                            <img src="./assets/img/evenements01.jpg" alt="" />
                         </div>
-                        <button class="savoir-button">en savoir plus</button>
-                    </article>
 
-                    <article>
-                        <img
-                            class="img_container"
-                            src="./assets/img/evenements02.jpg"
-                            alt=""
-                        />
-                        <div class="container_texte">
-                            <div class="titre2">
-                                <h4>Bourses miniatures</h4>
-                            </div>
-                            <div class="sous-titre">
-                                <p>
-                                    Venez découvrir la beauté d’anciens jouets à
-                                    la salle des fêtes, le 16 octobre 2022.
-                                </p>
-                            </div>
+                        <h4>Rassemblement</h4>
+                        <p>
+                            Rassemblement de véhicules de collection. Disponible
+                            d’avril à novembre 2022.
+                        </p>
+                        <button class="button">En savoir Plus</button>
+                    </div>
+                    <div class="events">
+                        <div class="img-container">
+                            <img src="./assets/img/evenements02.jpg" alt="" />
                         </div>
-                        <button class="savoir-button">en savoir plus</button>
-                    </article>
-
-                    <article>
-                        <img
-                            class="img_container"
-                            src="./assets/img/evenements03.jpg"
-                            alt=""
-                        />
-                        <div class="container_texte">
-                            <h4>Marques oubliées</h4>
-                            <div class="sous-titre">
-                                <p>
-                                    Visitez une exposition organisée par
-                                    l’A.M.A.V, disponible du 1er avril au 6
-                                    novembre 2022.
-                                </p>
-                            </div>
+                        <h4>Bourses miniatures</h4>
+                        <p>
+                            Venez découvrir la beauté d’anciens jouets à la
+                            salle des fêtes, le 16 octobre 2022.
+                        </p>
+                        <button class="button">En savoir Plus</button>
+                    </div>
+                    <div class="events">
+                        <div class="img-container">
+                            <img src="./assets/img/evenements03.jpg" alt="" />
                         </div>
-                        <button class="savoir-button">en savoir plus</button>
-                    </article>
-                </section>
+                        <h4>Marques oubliées</h4>
+                        <p>
+                            Visitez une exposition organisée par l’A.M.A.V,
+                            disponible du 1er avril au 6 novembre 2022.
+                        </p>
+                        <button class="button">En savoir Plus</button>
+                    </div>
+                </div>
             </section>
             <div class="section-col-association">
                 <section class="association">
