responsive col-anim

--- a/Decouvrir/decouvri.html
+++ b/Decouvrir/decouvri.html
@@ -49,9 +49,11 @@
         </header>
         <main>
             <section class="aston-martin">
-                <h2>1964</h2>
                 <div class="car-content">
                     <div class="grid-car">
+                        <div class="h2-container">
+                            <h2>1964</h2>
+                        </div>
                         <img
                             src="../assets/img/certif-handicap.jpg"
                             alt=""
