--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
                                 l'évolution de l'industrie automobile française
                                 sur près d'un siècle.
                             </p>
-
+                        </div>
+                        <div class="btn-container">
                             <button class="button">En savoir plus</button>
                         </div>
                     </div>
@@ -82,6 +83,8 @@
                                 Notre musée vous propose différentes animations,
                                 idéales pour petits et grands !
                             </p>
+                        </div>
+                        <div class="btn-container">
                             <button class="button">En savoir plus</button>
                         </div>
                     </div>
