--- a/index.html
+++ b/index.html
@@ -200,24 +200,19 @@
             </section>
             <div class="section-col-association">
                 <section class="association">
-                    <h2>Notre association</h2>
+                    <div class="title-container">
+                        <h2>Notre association</h2>
+                    </div>
                     <section class="container">
-                        <div class="association-content">
-                            <img src="./assets/img/association.jpg" alt="" />
-                            <br />
-                            <div class="association-txt">
-                                <h4>
-                                    Amis du Musée de l’Automobile de Valençay
-                                </h4>
-                                <p>
-                                    Le but de cette association est de
-                                    promouvoir, d’animer et de valoriser le
-                                    musée de l’Automobile de Valençay.
-                                </p>
-                                <button class="savoir-button">
-                                    En savoir plus
-                                </button>
-                            </div>
+                        <img src="./assets/img/association.jpg" alt="" />
+                        <div class="association-txt">
+                            <h4>Amis du Musée de l’Automobile de Valençay</h4>
+                            <p>
+                                Le but de cette association est de promouvoir,
+                                d’animer et de valoriser le musée de
+                                l’Automobile de Valençay.
+                            </p>
+                            <button class="button">En savoir plus</button>
                         </div>
                     </section>
                 </section>
