--- a/souf.html
+++ b/souf.html
@@ -41,3 +41,20 @@
         </section>
     </body>
 </html>
+
+<section class="animations">
+    <h2>Animations</h2>
+    <div class="animations-content">
+        <img src="./assets/img/animation.jpg" alt="" />
+        <div class="animation-txt">
+            <h4>Plus qu’une simple visite</h4>
+            <p>
+                Notre musée vous propose différentes animations, idéales pour
+                petits et grands !
+            </p>
+        </div>
+        <div class="btn-container">
+            <button class="button">En savoir plus</button>
+        </div>
+    </div>
+</section>
