--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="./styles/index.css" />
     </head>
     <body>
-        <header>
+        <!-- <header>
             <div class="top-bar">
                 <div class="top-bar-container">
                     <h5>Ouvert de 8h à 19h</h5>
@@ -49,7 +49,7 @@
                     <span><i class="fa-solid fa-arrow-down"></i></span>
                 </div>
             </div>
-        </header>
+        </header> -->
         <main>
             <div class="section-col-anim">
                 <section class="collection">
@@ -139,24 +139,27 @@
                 <h2>Accès</h2>
                 <div class="grid-acces">
                     <p>12, Avenue de la Résistance 36600 VALENCAY</p>
-                    <ul>
-                        <li></li>
-                        <li><i class="fa-solid fa-wheelchair-move"></i></li>
-                        <li><i class="fa-solid fa-square-parking"></i></li>
-                        <li>
-                            <i class="fa-regular fa-dog-leashed"></i>
-                        </li>
-                        <li><i class="fa-solid fa-camera"></i></li>
-                    </ul>
-                    <iframe
-                        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10851.127460874199!2d1.5606966!3d47.1621265!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x98b7ea5c01a0bc7!2sMus%C3%A9e%20de%20l&#39;Automobile%20de%20Valen%C3%A7ay!5e0!3m2!1sfr!2sfr!4v1665930359178!5m2!1sfr!2sfr"
-                        width="600"
-                        height="450"
-                        style="border: 0"
-                        allowfullscreen=""
-                        loading="lazy"
-                        referrerpolicy="no-referrer-when-downgrade"
-                    ></iframe>
+                    <div class="icons">
+                        <ul>
+                            <li><i class="fa-solid fa-wheelchair-move"></i></li>
+                            <li><i class="fa-solid fa-square-parking"></i></li>
+                            <li>
+                                <i class="fa-solid fa-dog"></i>
+                            </li>
+                            <li><i class="fa-solid fa-camera"></i></li>
+                        </ul>
+                    </div>
+                    <div class="maps-content">
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10851.127460874199!2d1.5606966!3d47.1621265!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x98b7ea5c01a0bc7!2sMus%C3%A9e%20de%20l&#39;Automobile%20de%20Valen%C3%A7ay!5e0!3m2!1sfr!2sfr!4v1665930359178!5m2!1sfr!2sfr"
+                            width="600"
+                            height="450"
+                            style="border: 0"
+                            allowfullscreen=""
+                            loading="lazy"
+                            referrerpolicy="no-referrer-when-downgrade"
+                        ></iframe>
+                    </div>
                 </div>
             </section>
             <section class="evenements">
